# WhatToWeEat

./: .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: backend.yml  frontend.yml
Backend_WhatToWeEat/: .env  .env.development  .env.production  .eslintrc.js  .gitignore  Makefile  README.md  app.js  app.py  main.js  package-lock.json  package.json  project.db  pyproject.toml  render.yaml
Backend_WhatToWeEat/controllers/: restaurantController.js  userController.js
Backend_WhatToWeEat/instance/: project.db
Backend_WhatToWeEat/main/: __init__.py  model.py  route.py
Backend_WhatToWeEat/middlewares/: errorHandler.js  restaurant.js
Backend_WhatToWeEat/models/: index.js  restaurantModel.js  userModel.js
Backend_WhatToWeEat/routes/: restaurantRoutes.js  userRoutes.js
Backend_WhatToWeEat/tests/: restaurant.test.js  user.test.js
Backend_WhatToWeEat/utils/: database.js  envSetup.js  fileUpload.js  jwt.js
Frontend_WhatToWeEat/: .env  .env.production  .eslintrc.js  README.md  components.d.ts  data.json  index.html  package-lock.json  package.json  tailwind.config.js  test.js  vite.config.js
Frontend_WhatToWeEat/src/: App.vue  index.css  main.js
Frontend_WhatToWeEat/src/api/: authentication.js  index.js  restaurant.js
Frontend_WhatToWeEat/src/components/: ImageUpload.vue  LoginPage.vue  NavBar.vue  RegisterPage.vue  RestaurantList.vue  RestaurantModal.vue  RestaurantPick.vue
Frontend_WhatToWeEat/src/customize/: all.css  all.css.map  all.scss
Frontend_WhatToWeEat/src/pages/: Login.vue  (+6 more)
(+2 files in other folders)
