[tool.poetry]
name = "what_to_eat"
version = "0.1.0"
description = ""
authors = ["Ray Chen <26718787+hedgeruei@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
